corrección flickering view on github

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1632,32 +1632,35 @@ html, body {
   float: right;
   color: #428bca;
   margin-top: 3em;
-}
-/* line 90, ../sass/main.scss */
-#view_on_github h1 {
-  transition: padding 0.3s ease-in;
-  padding: 0 1em 0.2em;
-  font-weight: 300;
+  width: auto;
+  padding-left: 0;
+  transition: padding-left 0.3s ease-in;
   border-bottom: 1px solid #357ebd;
 }
-/* line 97, ../sass/main.scss */
-#view_on_github:hover h1 {
-  padding-left: 5em;
+/* line 94, ../sass/main.scss */
+#view_on_github h1 {
+  font-weight: 300;
+  padding: 0.1em 1.5em;
+  float: right;
+}
+/* line 99, ../sass/main.scss */
+#view_on_github:hover {
+  padding-left: 8em;
 }
 
 @media (min-width: 30em) {
-  /* line 106, ../sass/main.scss */
+  /* line 107, ../sass/main.scss */
   #main_container > header h1 {
     padding: 1em 2em 0.5em;
   }
 
-  /* line 109, ../sass/main.scss */
+  /* line 110, ../sass/main.scss */
   #main_container {
     width: 80%;
     margin: 0 auto;
   }
 
-  /* line 113, ../sass/main.scss */
+  /* line 114, ../sass/main.scss */
   .git_element {
     font-size: 1.1em;
     padding: 2em 1.5em 1.4em;
@@ -1666,7 +1669,7 @@ html, body {
     border-right: 1px solid #d8d8d8;
     border-bottom-width: 4px;
   }
-  /* line 120, ../sass/main.scss */
+  /* line 121, ../sass/main.scss */
   .git_element:after {
     position: absolute;
     right: -0.15em;
@@ -1674,12 +1677,12 @@ html, body {
     font-size: 3em;
     text-shadow: none;
   }
-  /* line 127, ../sass/main.scss */
+  /* line 128, ../sass/main.scss */
   .git_element .description {
     padding-right: 8%;
   }
 
-  /* line 132, ../sass/main.scss */
+  /* line 133, ../sass/main.scss */
   .robotic_project:after {
     content: "\e64e";
     bottom: -0.2em;
@@ -1687,7 +1690,7 @@ html, body {
     color: #268474;
   }
 
-  /* line 140, ../sass/main.scss */
+  /* line 141, ../sass/main.scss */
   .smartphone_project:after {
     content: "\e65b";
     bottom: 0em;
@@ -1696,7 +1699,7 @@ html, body {
     color: #f18e26;
   }
 
-  /* line 149, ../sass/main.scss */
+  /* line 150, ../sass/main.scss */
   .tablet_project:after {
     content: "\e65d";
     bottom: 0em;
@@ -1705,7 +1708,7 @@ html, body {
     color: #fc4750;
   }
 
-  /* line 158, ../sass/main.scss */
+  /* line 159, ../sass/main.scss */
   .ereader_project:after {
     content: "\e65c";
     bottom: 0em;
@@ -1714,38 +1717,38 @@ html, body {
     color: #992c7e;
   }
 
-  /* line 167, ../sass/main.scss */
+  /* line 168, ../sass/main.scss */
   .android_project:after {
     content: "\e649";
     color: #a4c639;
   }
 }
 @media (min-width: 47.9375em) {
-  /* line 175, ../sass/main.scss */
+  /* line 176, ../sass/main.scss */
   #main_container {
     width: 70%;
     margin: 0 auto;
   }
 
-  /* line 179, ../sass/main.scss */
+  /* line 180, ../sass/main.scss */
   .git_element {
     width: 47%;
     float: left;
     min-height: 8.9em;
     margin: 0.6em 1.5%;
   }
-  /* line 184, ../sass/main.scss */
+  /* line 185, ../sass/main.scss */
   .git_element .description {
     padding-right: 8%;
   }
 }
 @media (min-width: 61.9375em) {
-  /* line 191, ../sass/main.scss */
+  /* line 192, ../sass/main.scss */
   #main_container > header h1 {
     font-size: 1.3em;
   }
 
-  /* line 194, ../sass/main.scss */
+  /* line 195, ../sass/main.scss */
   .git_element {
     width: 30%;
     min-height: 10.8em;
@@ -1753,11 +1756,11 @@ html, body {
     	width: 60%;
     } */
   }
-  /* line 200, ../sass/main.scss */
+  /* line 201, ../sass/main.scss */
   .git_element .description {
     padding-right: 20%;
   }
-  /* line 203, ../sass/main.scss */
+  /* line 204, ../sass/main.scss */
   .git_element:after {
     position: absolute;
     right: -0.15em;
@@ -1765,36 +1768,36 @@ html, body {
     font-size: 4em;
   }
 
-  /* line 211, ../sass/main.scss */
+  /* line 212, ../sass/main.scss */
   .robotic_project:after {
     font-size: 5em;
   }
 
-  /* line 218, ../sass/main.scss */
+  /* line 219, ../sass/main.scss */
   .smartphone_project:after,
   .ereader_project:after {
     bottom: 0;
     right: -0.18em;
   }
 
-  /* line 224, ../sass/main.scss */
+  /* line 225, ../sass/main.scss */
   .tablet_project:after {
     bottom: 0;
     right: -0.12em;
   }
 
-  /* line 229, ../sass/main.scss */
+  /* line 230, ../sass/main.scss */
   #view_on_github {
     margin-top: 6em;
   }
 }
 @media (min-width: 74.9375em) {
-  /* line 234, ../sass/main.scss */
+  /* line 235, ../sass/main.scss */
   .git_element {
     font-size: 1.2em;
     margin-top: 2em;
   }
-  /* line 237, ../sass/main.scss */
+  /* line 238, ../sass/main.scss */
   .git_element .description {
     font-size: 0.8em;
   }
