--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -87,16 +87,17 @@ html,body{
 	float: right;
 	color: $color_blue_1;
 	margin-top: 3em;
+	width: auto;
+	padding-left: 0;
+	transition:padding-left 0.3s ease-in;
+	border-bottom: 1px solid darken($color_blue_1,5);
 	h1{
-		transition:padding 0.3s ease-in; 
-		padding: 0 1em 0.2em;
 		font-weight: 300;
-		border-bottom: 1px solid darken($color_blue_1,5);
+		padding: 0.1em 1.5em;
+		float: right;
 	}
 	&:hover{
-		h1{
-			padding-left: 5em;
-		}
+		padding-left: 8em;
 	}
 }
 
